Adding Reservation Endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # DB Credentials (We'll hide these in a minute)
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-spring.datasource.url=jdbc:postgresql://ecommerce-db.c0tkk6y04mmt.us-east-1.rds.amazonaws.com:5432/db-ecommerce
-spring.datasource.username=postgres
-spring.datasource.password=omegamegamega
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://ecommerce-db.c0tkk6y04mmt.us-east-1.rds.amazonaws.com:5432/db-ecommerce
+#spring.datasource.username=postgres
+#spring.datasource.password=omegamegamega
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA and Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
